# ralgos

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
etc/: ralgos.service
src/: config.cpp  config.h  coroutine.cpp  coroutine.h  handler.h  qqwry.cpp  qqwry.h  raddrs.cpp  ralgos.cpp  rsegmt.cpp  runner.cpp  runner.h  server.cpp  server.h  session.cpp  session.h  vendor.h
src/handler/: address.cpp  address.h  dummy.cpp  dummy.h  ping.cpp  ping.h  segment.cpp  segment.h  unknown.cpp  unknown.h
var/: user.dict.utf8
